objects/ASI_TH_CRM_PlanOfftake__c.object
<CustomObject>
    <fields>
        <fullName>ASI_TH_CRM_Bottle_Size__c</fullName>
        <formula>ASI_TH_CRM_Subbrand__r.ASI_HK_CRM_Bottle_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bottle Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract (TH)</label>
        <referenceTo>ASI_TH_CRM_Contract__c</referenceTo>
        <relationshipLabel>Plan Offtake</relationshipLabel>
        <relationshipName>ASI_TH_CRM_Plan_Offtake_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Month__c</fullName>
        <label>Month</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Plan Offtake</relationshipLabel>
        <relationshipName>ASI_TH_CRM_PlanOfftake_Outlet</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_PackFactor__c</fullName>
        <label>Pack Factor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Pack_Size__c</fullName>
        <formula>ASI_TH_CRM_Subbrand__r.ASI_TH_CRM_Pack_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pack Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Plan_Offtake_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Plan Offtake External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Plan_Offtake_Sub_brand_Total__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Offtake - Sub-brand Total</label>
        <referenceTo>ASI_TH_CRM_Plan_Offtake_Sub_brand_Total__c</referenceTo>
        <relationshipLabel>Plan Offtake</relationshipLabel>
        <relationshipName>ASI_TH_CRM_Plan_Offtake</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Sub_brand_Code__c</fullName>
        <formula>ASI_TH_CRM_Subbrand__r.ASI_MFM_Sub_brand_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Subbrand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Plan Offtake</relationshipLabel>
        <relationshipName>ASI_TH_CRM_PlanOfftake_SubBrand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_UOM__c</fullName>
        <label>UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Year__c</fullName>
        <label>Year</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Plan Offtake</label>
    <nameField>
        <label>Period</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Offtake</pluralLabel>
    <recordTypes>
        <fullName>ASI_TH_CRM_Plan_Offtake</fullName>
        <active>true</active>
        <label>ASI TH CRM Plan Offtake</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ASI_TH_CRM_PlanOfftakeUpdate</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT( ASI_TH_CRM_Plan_Offtake_Sub_brand_Total__r.ASI_TH_CRM_Contract__r.ASI_TH_CRM_Contract_Status__c ) &lt;&gt; &apos;Draft&apos;, TEXT(ASI_TH_CRM_Plan_Offtake_Sub_brand_Total__r.ASI_TH_CRM_Contract__r.ASI_TH_CRM_Contract_Status__c) &lt;&gt; &apos;Editing&apos;,
NOT( CONTAINS( $Profile.Name, &apos;System Admin&apos;))
)</errorConditionFormula>
        <errorMessage>Plan Offtake can only be edited when Contract Status is Draft or Editing</errorMessage>
    </validationRules>
</CustomObject>